// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VerificationRequestToast > should render a cross-user verification 1`] = `
<div>
  <div>
    <div
      class="_description"
    >
      @alice:domain (@other:user)
    </div>
    <div
      aria-live="off"
      class="_buttons"
      data-testid="toast-buttons"
    >
      <button
        class="_button"
        data-kind="secondary"
        data-size="md"
        role="button"
        tabindex="0"
      >
        Ignore
      </button>
      <button
        class="_button"
        data-kind="primary"
        data-size="md"
        role="button"
        tabindex="0"
      >
        Start Verification
      </button>
    </div>
  </div>
</div>
`;

exports[`VerificationRequestToast > should render a self-verification 1`] = `
<div>
  <div>
    <div
      class="_description"
    >
      my other device
      <div>
        other_device from 1.1.1.1
      </div>
    </div>
    <div
      aria-live="off"
      class="_buttons"
      data-testid="toast-buttons"
    >
      <button
        class="_button"
        data-kind="secondary"
        data-size="md"
        role="button"
        tabindex="0"
      >
        Ignore
      </button>
      <button
        class="_button"
        data-kind="primary"
        data-size="md"
        role="button"
        tabindex="0"
      >
        Start Verification
      </button>
    </div>
  </div>
</div>
`;
